[package]
name = "term-kit"
authors = ["Tyler Critchlow"]
category = "utilities"
keywords = ["terminal", "ui", "widgets"]
description = "A simple terminal UI toolkit for Rust"
license = "MIT"
homepage = "https://github.com/tylercritchlow/termkit"
readme = "README.md"
repository = "https://github.com/tylercritchlow/termkit"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
textwrap = "0.16.1"

[dev-dependencies]
rand = "0.8.5"