[package]
name = "term-kit"
authors = ["Tyler Critchlow"]
category = "utilities"
keywords = ["terminal", "tui", "widgets"]
description = "A simple terminal UI toolkit for Rust"
license = "MIT"
homepage = "https://github.com/tylercritchlow/termkit"
readme = "README.md"
repository = "https://github.com/tylercritchlow/termkit"
version = "0.2.2"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
textwrap = "0.16.1"

[dev-dependencies]
term-kit = { path = "", features = ["full-tui-interface"] }
rand = "0.9.0"
sysinfo = "0.33.1"

[features]
default = []
full-tui-interface = []